# forallpeople

./: .buildinfo  .gitignore  .travis.yml  MANIFEST.in  README.md  README.rst  background.html  basic_usage.html  basic_usage.ipynb  docs_env.yml  empiricals.html  empiricals.ipynb  environments.html  environments.ipynb  genindex.html  index.html  index.ipynb  interface.html  interface.ipynb  objects.inv  pyproject.toml  pyproject_old.toml  search.html  searchindex.js  setup.py  standard_behaviours.html
_modules/: forallpeople.html  index.html
_sources/: background.ipynb.txt  environments.ipynb.txt  standard_behaviours.ipynb.txt
_static/: documentation_options.js
docs/: Makefile  nomenclature.ipynb
forallpeople/: LICENSE.TXT  __init__.py  default.json  dimensions.py  electrical.json  environment.py  physical_helper_functions.py  si_environment.py  structural.json  test_forallpeople.py  test_tuplevector.py  tuplevector.py
prof/: test___abs__.prof  test___add__.prof  test___eq__.prof  test___float__.prof  test___ge__.prof  test___gt__.prof  test___le__.prof  test___lt__.prof  test___mul__.prof  test___pow__.prof  test___rsub__.prof  test___rtruediv__.prof  test___sub__.prof  test___truediv__.prof  test__auto_prefix.prof  test__auto_prefix_kg.prof  test__auto_prefix_value.prof  test__check_dims_parallel.prof  test__dims_basis_multiple.prof  test__dims_quotient.prof  test__evaluate_dims_and_factor.prof  test__get_derived_unit.prof  test__get_superscript_string.prof  test__get_unit_components_from_dims.prof  test__get_unit_string.prof  test__get_units_by_factor.prof  (+11 more)
(+27 files in other folders)
